# object-detection

./: CMakeLists.txt
include/: detection_utils.h
src/: detection_utils.cpp  main.cpp
